--- a/.env
+++ b/.env
@@ -3,3 +3,12 @@ PORT_VIEWS=http://localhost:3000
 vnp_TmnCode=MZBH8I9S
 vnp_HashSecret=JBCAVJBXHQAJBJEKLMSDMLSFLULQJQOT
 vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+DATABASE=demo_giamgia
+HOST=localhost
+PORT=3306
+USER=root
+PASS=""
+LIMIT=10
+
+ACCESS_KEY=F8BBA842ECF85
+SERCET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
