--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ vnp_HashSecret=JBCAVJBXHQAJBJEKLMSDMLSFLULQJQOT
 vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 DATABASE=demo_giamgia
 HOST=localhost
-PORT=3306
+PORT_MYSQL=3306
 USER=root
 PASS=""
 LIMIT=10
