--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ PORT_VIEWS=http://localhost:3000
 vnp_TmnCode=MZBH8I9S
 vnp_HashSecret=JBCAVJBXHQAJBJEKLMSDMLSFLULQJQOT
 vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-DATABASE=demo_giamgia
-HOST=localhost
+DATABASE=bcndwcxfcewfwt2n5nhq
+HOST=bcndwcxfcewfwt2n5nhq-mysql.services.clever-cloud.com
 PORT_MYSQL=3306
-USER=root
-PASS=""
+USER=uaiv8dfxqgm5y67j
+PASS=cBNwOxEqNnLD5jp26Bep
 LIMIT=10
