--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "socket.io": "^4.7.2",
     "sortobject": "^5.3.0",
     "vnpay": "^0.2.1"
+  },
+  "devDependencies": {
+    "@types/mysql": "^2.15.25"
   }
 }
