--- a/.env
+++ b/.env
@@ -3,9 +3,9 @@ PORT_VIEWS=http://localhost:3000
 vnp_TmnCode=MZBH8I9S
 vnp_HashSecret=JBCAVJBXHQAJBJEKLMSDMLSFLULQJQOT
 vnp_Url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
-DATABASE=id21789124_demo_giamgia
+DATABASE=demo_giamgia
 HOST=localhost
 PORT_MYSQL=3306
-USER=id21789124_root
-PASS=Long@0808
+USER=root
+PASS=""
 LIMIT=10
